2008-12-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore/WidgetParser.cs:
	* MonoDevelop.GtkCore/ObjectsDocument.cs: Getting the list of widgets is
	an expensive operation. It shouldn't be a property.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* MonoDevelop.GtkCore.mdp: Add AssemblyInfo.cs files that are
	autogenerated from the addin manifests.

2008-12-01  Mike Kestner <mkestner@novell.com> 

	* libstetic/wrapper/objects.xml: move ToggleButton ahead of CheckButton
	and add ToggleButton signal item group to CheckButton.  Remove toggled
	signal from RadioButton since it inherits it from CheckButton.
	[Fixes #450237]

2008-11-25  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore/GtkCoreService.cs: refactor the default and 
	supported version checks into the ReferenceManager, with all the other
	package and assembly code.
	* MonoDevelop.GtkCore/ReferenceManager.cs: refactored default and 
	supported version properties. 
	* MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs: use new api.
	* MonoDevelop.GtkCore.Dialogs/GtkFeatureWidget.cs: use new api.
	* MonoDevelop.GtkCore.Dialogs/WidgetBuilderOptionPanel.cs: use new api.

2008-11-23  Mike Kestner <mkestner@novell.com> 

	* *: I've typed lib/stetic/libstetic(ui) a few too many times.

2008-11-18  Mike Kestner <mkestner@novell.com> 

	* */Makefile.am: break the gnome/gconf-sharp dependencies.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: set up
	callbacks to the PlatformService for MIME resolution and showing
	urls.

2008-11-11  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: use the 
	new ForceUpdate method on the ProjectDom returned by GetParserContext
	to ensure a fully updated database.

2008-11-11  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs: null guarding for
	all the things that can possibly go wrong with the parse in 
	GetClass.
